adding images and paragraphs to the page and changing color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+        <body>
+                <div class="container">
+                    <p class="guide sunset"><img src="https://images.unsplash.com/photo-1489712310660-bbce44cc541d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1956&q=80">Here is my first paragraph with some text. This paragraph will show up first on the webpage.</p>
+                    <p class="guide cat"><img src="https://images.unsplash.com/photo-1472157592780-9e5265f17f8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80">This is the second paragraph with some different text. This second paragraph will be the middle paragraph on the webpage.</p>
+                    <p class="guide sky"><img src="https://images.unsplash.com/photo-1453673380845-bf3db4295d66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">I am the last paragraph on the webpage. I will be the third and on the bottom.</p>
+                </div>
     
 </body>
 </html>
